# hometap-technical-test

./: README.md  README_INSTRUCTIONS.md  README_PROJECT.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/backend/: settings.py  urls.py
backend/properties/: serializers.py  tests.py  urls.py  views.py
backend/properties/config/: providers.py
backend/properties/services/: cache_service.py  provider1.py  provider2.py
backend/properties/settings/: cache_settings.py
backend/properties/utils/: conversion.py  data_procesor.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: cache-badge.test.tsx  cache-badge.tsx  loading.tsx  results-table.tsx
frontend/src/components/__snapshots__/: cache-badge.test.tsx.snap
frontend/src/constants/: index.ts
frontend/src/constants/table/: property-fields.tsx
frontend/src/hooks/: useSearch.tsx
frontend/src/modules/properties/search/: index.tsx
frontend/src/services/: property.test.ts  property.ts
frontend/src/test/: test-helpers.ts
frontend/src/test/components/: cache-badge.test.tsx  loading.test.tsx
frontend/src/test/hooks/: use-search.test.tsx
frontend/src/test/services/: property.test.ts
frontend/src/types/: providers.ts
