[tool.poetry]
name = "hometap-backend"
version = "0.1.0"
description = "Starter template for Hometap engineering exercise"
authors = ["Greg Mundy <gmundy@hometap.com>"]
readme = "README.md"
packages = [{include = "hometap_backend"}]

[tool.poetry.dependencies]
python = "^3.11.7"
django = "^5.1.5"
python-dotenv = "^1.0.1"
django-cors-headers = "^4.6.0"
django-redis = "^5.4.0"
djangorestframework = "^3.15.2"
requests = "^2.32.3"
asgiref = "^3.8.1"
certifi = "^2025.1.31"
charset-normalizer = "^3.4.1"
idna = "^3.10"
redis = "^5.2.1"
sqlparse = "^0.5.3"
urllib3 = "^2.3.0"
pylint = "^3.3.4"
graphviz = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"